Revert "Fix viewport height on mobile"

--- a/style.v1.4.css
+++ b/style.v1.4.css
@@ -1,5 +1,5 @@
   body {
-    height: calc(var(--vh, 1vh) * 100);
+    height: 100vh;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -28,7 +28,7 @@
   #gameScreen {
     display: flex;
     flex-direction: column;
-    height: calc(var(--vh, 1vh) * 100);
+    height: 100vh;
     /* 전체 높이 */
     margin: 0;
     /* 혹시 기본 마진 있으면 제거 */
@@ -855,7 +855,7 @@
     top: 0;
     left: 0;
     width: 100vw;
-    height: calc(var(--vh, 1vh) * 100);
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.4);
     /* ✅ 반투명 배경 */
     display: flex;
@@ -1025,7 +1025,7 @@
     top: 0 !important;
     left: 0 !important;
     width: 100vw !important;
-    height: calc(var(--vh, 1vh) * 100) !important;
+    height: 100vh !important;
     display: none;
     /* flex로 중앙 배치 */
     justify-content: center !important;
